@@ -12,27 +12,22 @@ import java.io.Serializable;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Set;
 
-import javax.servlet.http.HttpServletResponse;
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
-
 import org.springframework.context.annotation.Profile;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
@@ -42,6 +37,9 @@ import de.uniwuerzburg.zpd.ocr4all.application.core.project.ProjectService;
 import de.uniwuerzburg.zpd.ocr4all.application.core.security.SecurityService;
 import de.uniwuerzburg.zpd.ocr4all.application.persistence.project.Folio;
 import de.uniwuerzburg.zpd.ocr4all.application.persistence.project.Keyword;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 
 /**
  * Defines folio controllers for the api.
@@ -51,7 +49,7 @@ import de.uniwuerzburg.zpd.ocr4all.application.persistence.project.Keyword;
  * @since 1.8
  */
 @Profile("api")
-@Controller
+@RestController
 @RequestMapping(path = FolioApiController.contextPath, produces = CoreApiController.applicationJson)
 public class FolioApiController extends CoreApiController {
 	/**
@@ -119,7 +117,7 @@ public class FolioApiController extends CoreApiController {
 	public ResponseEntity<FolioResponse> entity(@PathVariable String projectId, @RequestParam Integer id) {
 		Authorization authorization = authorizationFactory.authorize(projectId);
 		try {
-			List<Folio> folio = authorization.project.getFolios(Collections.singleton(id));
+			List<Folio> folio = authorization.project.getFolios(Set.of(id));
 
 			return folio.isEmpty() ? ResponseEntity.status(HttpStatus.NO_CONTENT).build()
 					: ResponseEntity.ok().body(new FolioResponse(folio.get(0)));
@@ -191,7 +189,7 @@ public class FolioApiController extends CoreApiController {
 	 * @since 1.8
 	 */
 	@PostMapping(orderUploadRequestMapping + projectPathVariable)
-	public void orderUpload(@PathVariable String projectId, @RequestParam("file") MultipartFile file,
+	public void orderUpload(@PathVariable String projectId, @RequestParam MultipartFile file,
 			HttpServletResponse response) {
 		Authorization authorization = authorizationFactory.authorize(projectId, ProjectRight.special);
 		try {
